--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
 		<meta name="screen-orientation" content="portrait" />
 		<meta name="x5-orientation" content="portrait" />
 		<meta name="referrer" content="no-referrer" />
+
+		<!-- 手动rem适配 -->
+		<script>
+			(function () {
+				function setRemUnit() {
+					var deviceWidth = document.documentElement.clientWidth || document.body.clientWidth;
+					var fontSize = deviceWidth / 37.5 > 30 ? 30 : deviceWidth / 37.5;
+					document.documentElement.style.fontSize = fontSize + "px";
+				}
+
+				setRemUnit();
+				window.addEventListener("resize", setRemUnit);
+				window.addEventListener("DOMContentLoaded", setRemUnit);
+			})();
+		</script>
+
 		<title>识字小工具</title>
 		<link rel="stylesheet" href="./src/style.css" />
 	</head>
